--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pokemon Yellow</title>
   </head>
   <body>
-    <h1>Welcome to Pokemon Amarillo!</h1>
+    <h1>Welcome to Pokemon Amarillo! Version Nueva</h1>
 
     <p>
       ¡El juego empezará en 10 segundos! Necesitas abrir la consola del
